welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: not found: value num
x = num.length;
    ^indexOfValue:8: error: not found: value num
	if (num[i]==value)
            ^indexOfValue:5: error: type mismatch;
 found   : Unit
 required: Int
for (i<- 0 to x-1)
      ^